--- a/app/src/main/res/layout/fragment_costs.xml
+++ b/app/src/main/res/layout/fragment_costs.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="#BBBBBB">
-
-    <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <LinearLayout
             android:id="@+id/linear_layout_input_container"
@@ -63,4 +52,4 @@
                 android:text="@string/submit"/>
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
